deployments/homelab/cloud/undercloud/20-gitops/flux-system/allow-tofu-artifacts.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tofu-artifacts
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app: source-controller
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - tofu-system
                  - openstack
                  - cert-manager
          podSelector:
            matchLabels:
              app.kubernetes.io/name: tofu-controller
      ports:
        - protocol: TCP
          port: http
